(feat): system settings — image filter per role, filtered catalog tree, admin stats page
  - Add SystemSettings entity (V21 migration) with three toggles: require images for admin / dealer / public users; GET/PUT /api/v1/admin/settings persists settings to DB
  - Apply "require images" filter automatically in ProductService (JPA Specification) and SearchService (SQL EXISTS clause) based on current user's role from SecurityContext
  - Add filtered catalog tree: admins see all nodes including empty; dealers and public users see only nodes that contain visible products — getSectionTree() now accepts hideEmpty +
  requireImages flags with cache key per combination
  - Replace N+1 countByGroupId calls in tree building with two batch JPQL queries (countActiveByGroupIds, countActiveWithMediaByGroupIds)
  - Add GET /api/v1/admin/settings/stats — rich statistics for analysis: media coverage, stock price coverage, dealer activity (with/without price list, SKU mappings), catalog
  structure (sections/categories/groups/empty groups)
  - Add Settings tab in admin panel: visibility toggles, 18+ stat cards, danger zone (delete all product media with confirmation)
  - Update tests: fix CatalogServiceTest, CatalogControllerTest, ProductServiceTest, SearchServiceTest for new signatures; add 4 new tree-filtering tests (697 total, 0 failures)